# fed-xai

./: LICENSE  README.md  pyproject.toml
src/fed_xai/: client_app.py  data_loaders.py  explain.py  save_model_strategy.py  server_app.py  task.py  xgb_classifier.py  xgboost_runner.py
src/fed_xai/data_loaders/: diabetes_loader.py  loader.py  lung_loader.py
src/fed_xai/explainers/: bellatrex_explainer.py  combining_rulecosi_explainer.py  rulecosi_explainer.py  shap_explainer.py
src/fed_xai/federation/: client_app.py  server_app.py
src/fed_xai/federation/random_forest/: rf_client_app.py  rf_server_app.py  training.py
src/fed_xai/federation/xgboost/: const.py  run_xgb_simulation.py  run_xgb_simulation_from_best.py  run_xgb_simulation_from_last.py  xgb_client_app.py  xgb_save_model_strategy.py  xgb_server_app.py
src/fed_xai/helpers/: accuracy_score_with_threshold.py  booster_to_classifier.py  cleanup_output.py  generate_xgb_visualization.py  number_of_trees.py  rulecosi_helpers.py
src/fed_xai/xgboost/: booster_to_classifier.py  const.py  run_benchmark_analysis.py  run_trained_model.py  train_xgboost.py  train_xgboost_hyper.py
src/fed_xai/xgboost/federation/: run_benchmark.py  run_xgb_simulation.py  xgb_client_app.py  xgb_save_model_strategy.py  xgb_server_app.py
src/fed_xai/xgboost/standard/: train_xgboost.py  train_xgboost_hyper.py
