[project]
name = "fed-xai"
version = "0.1.0"
description = ""
authors = [{ name = "Martin Georgiu", email = "martin.georgiu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13.0"
dependencies = [
    "flwr[simulation] (>=1.17.0,<2.0.0)",
    "flwr-datasets (>=0.5.0,<0.6.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "rulecosi[xgboost] @ git+https://github.com/jobregon1212/rulecosi.git@cd7acee23c9c2f6e7f433aafac7bab446b67f3d2",
    "shap (>=0.47.1,<0.48.0)",
    "bellatrex[gui] (>=0.2.3,<0.3.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "datasets (>=2.14.6,<=3.1.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "fed_xai", from = "src" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # type annotation rules
    "ANN",
]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
follow_untyped_imports = true
